fixed picture sizing and text overflow for widths <380px

--- a/a3/css/custom.css
+++ b/a3/css/custom.css
@@ -1,8 +1,12 @@
-/*TODO do something about pictures for widths < 380px*/
 #infoPopup{
     max-width: 275px;
     margin-right: 15px;
     font-size: 90%;
+}
+.my-page .ui-listview .ui-li-desc.ui-li-aside{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 #avatar-container {
     background: white;
@@ -87,7 +91,7 @@ text-shadow: 0.5px 0.5px #387bbe;
 
 .ui-li-thumb{
     height: 100%;
-    max-height: 130px;
+    max-height: 100%;
     max-width: 100px;
 }
 /*special dimensions for sentinel image*/
@@ -98,8 +102,11 @@ text-shadow: 0.5px 0.5px #387bbe;
 #sentinel{
     overflow: hidden;
 }
-.ui-li-has-thumb .ui-btn-inner a.ui-link-inherit, .ui-li-static.ui-li-has-thumb {
+.ui-li-has-thumb .ui-btn-inner a.ui-link-inherit,
+.ui-li-static.ui-li-has-thumb {
     min-height: 79px;
+   /* max-height: 130px;     */
+    overflow: hidden;
 }
 .ui-btn-down-a,
 .ui-btn{
@@ -127,7 +134,9 @@ text-shadow: 0.5px 0.5px #387bbe;
 .my-page .ui-listview .ui-li-heading,
 .my-page .ui-listview .ui-li-desc {
     white-space: normal;
-    overflow: visible;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-height: 60px;
 }
 
 /* 768px: 2 column tiled layout.  */
@@ -176,6 +185,10 @@ text-shadow: 0.5px 0.5px #387bbe;
         top: 15px;
         width: auto;
         z-index: -1;
+    }
+    .ui-li-has-thumb .ui-btn-inner a.ui-link-inherit,
+    .ui-li-static.ui-li-has-thumb {
+        max-height: none;
     }
 
     /* Semi transparent background on tweet text, some positioning */
